--- a/迅享下载器/迅享下载器/迅享下载器.vcxproj.filters
+++ b/迅享下载器/迅享下载器/迅享下载器.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="util.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="httplib.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
